# panel-chemistry

./: .gitignore  .pylintrc  DEVELOPER_GUIDE.md  MANIFEST.in  README.md  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  script.py  setup.py
.github/workflows/: cicd.yaml  tests.yaml
binder/: postBuild  requirements.txt  start
binder/jupyter-panel-apps-server/: jupyter_panel_apps_server.py
examples/reference/: JSMEEditor.ipynb  MolStar.ipynb  NGLViewer.ipynb  PDBe_MolStar.ipynb  PDBe_webcomponent.ipynb  Py3DMol.ipynb
panel_chemistry/: .bokeh  __init__.py  jsme_editor.py  package-lock.json  package.json  tsconfig.json
panel_chemistry/bokeh_extensions/: index.ts  jsme_editor.py  jsme_editor.ts  ngl_viewer.py  ngl_viewer.ts
panel_chemistry/pane/: __init__.py  molstar_webcomponent.html  ngl_viewer.py  pdbe_molstar.py  py3dmol_viewer.py  temp_test_event.py
panel_chemistry/widgets/: jsme_editor.py  jsme_editory.py
src/panel_chemistry/: __init__.py  index.ts  package-lock.json  package.json
src/panel_chemistry/bokeh_extensions/: jsme_editor.py  jsme_editor.ts  layout.ts  ngl_viewer.py  ngl_viewer.ts
src/panel_chemistry/pane/: __init__.py  molstar_viewer.py  ngl_viewer.py  pdbe_molstar.py  py3dmol_viewer.py
src/panel_chemistry/widgets/: jsme_editor.py
tasks/: __init__.py  build.py  show.py  start.py  test.py
tests/: conftest.py  test_jsme_editor.py
tests/pane/: test_molstar_viewer.py  test_ngl_viewer.py  test_pdbe_molstar_viewer.py
tests/tests/: test_jsme_editor.py  test_jsme_editory.py
